# Anthropomorphic-Robot-Hands

./: .gitignore  README.md
CAD/: README.md
CAD/BidirectionalFinger/: BidirectionalFinger.SLDASM  CylindricalObject.SLDPRT  Middle.SLDASM  VarienseFS101.SLDPRT  base.SLDPRT  coilSpring.SLDPRT  forceSensorBase.SLDPRT  forceSurface.SLDPRT  middleDIP.SLDPRT  middleElastomer.SLDPRT  middleJointBase.SLDPRT  middleMIP.SLDPRT  middlePIP.SLDPRT  palmUpBase.SLDPRT  rotatingFingerBase.SLDPRT  servoPulleyRX28.SLDPRT  spacePulley.SLDPRT  spacer.SLDPRT  stabeFinger.SLDPRT  stableFinger.SLDPRT  thumbMechanismDriver.SLDPRT  tubeDriver.SLDPRT
CAD/Middle/: Coil Spring.SLDPRT  base.SLDPRT  middle.SLDASM  middleDIP.SLDPRT  middleElastomer.SLDPRT  middleJointBase.SLDPRT  middleMIP.SLDPRT  middlePIP.SLDPRT  palmUpBase.SLDPRT  rotatingFingerBase.SLDPRT  spacer.SLDPRT  thumbMechanismDriver.SLDPRT  tubeDriver.SLDPRT
CAD/STL/: CylindricalObject.STL  base.STL  forceSensorBase.STL  forceSurface.STL  middle.STL  palmUpBase.STL  rotatingFingerBase.STL  servoPulleyRX28.STL  spacePulley.STL  spacer.STL  stableFinger.STL  (+1 more)
DesignOptimization/: README.md
Software/: README.md
Software/ROS/hand_controller/: CMakeLists.txt  package.xml
Software/ROS/hand_controller/config/: adduction.yaml  flex.yaml
Software/ROS/hand_controller/launch/: controller_hand_manager.launch  start_adduction_controller.launch  start_flex_controller.launch
Software/ROS/hand_controller/src/: controller.py  double_motor_publisher.py  double_motor_publisher_sequence.py  hand_controller_adduction.py  hand_controller_flex.py
(+101 files in other folders)
