<?xml version="1.0"?>
<package>
  <name>hand_controller</name>
  <version>1.0.0</version>
  <description>The OpenBionics hand_controller package</description>

  <maintainer email="gpkont@vt.edu">George Kontoudis</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>dynamixel_controllers</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>dynamixel_controllers</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
